[package]
name = "code_analyzer"
version = "0.1.1"
authors = ["CodeWise Technologies <dev@codewisetech.biz>"]
edition = "2021"
description = "A Rust-based static code analysis tool for JavaScript, TypeScript, Python, and Go."
license = "MIT"
repository = "https://github.com/codewise-technologies/code_analyser"
homepage = "https://github.com/codewise-technologies/code_analyser"
documentation = "https://docs.rs/code_analyser"
readme = "README.md"
keywords = ["analyzer", "code-quality", "rust", "javascript", "typescript"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
regex = "1.10.6"
serde = "1.0.206"
serde_json = "1.0.124"
